--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^1.3.5",
     "react-toastify": "^9.1.1"
   }
 }
