Image upload added

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 DATABASE=mongodb://localhost:27017
 PORT=8000
 JWT_SECRET=QWERTY
+
+CLOUDINARY_NAME=ddguewc9x
+CLOUDINARY_KEY=722422532498213
+CLOUDINARY_SECRET=7hZh1fqeOgmMq2NkD-5TJ4qoh-s
