--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "antd": "^5.2.2",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
     "react-toastify": "^9.1.1"
   }
 }
