--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.4",
     "nodemon": "^2.0.20",
     "react-toastify": "^9.1.1"
   }
