Socketio added part 1

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ JWT_SECRET=QWERTY
 CLOUDINARY_NAME=ddguewc9x
 CLOUDINARY_KEY=722422532498213
 CLOUDINARY_SECRET=7hZh1fqeOgmMq2NkD-5TJ4qoh-s
+
+CLIENT_URL=http://localhost:3000
