--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-quill": "^1.3.5",
     "react-render-html": "^0.6.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1"
   }
 }
