--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.20",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "socket.io": "^4.6.1"
   }
 }
